# cppfront

./: .gitignore  CMakeLists.txt
.github/workflows/: build.yml  passthrough-tests.yml  regression-tests.yml
regression-tests/: CMakeLists.txt  pure2-hello.cpp2  pure2-multiple-returns-example.cpp2  pure2-pre-checks-example.cpp2
regression-tests/test-results/: pure2-multiple-returns-example.cpp  pure2-pre-checks-example.cpp  pure2-pre-checks-failing-example.cpp
source/: CMakeLists.txt
